test/conformance/chainsaw/ttl/propagation-policy/orphan/job.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: job
  annotations:
    cleanup.kyverno.io/propagation-policy: Orphan
spec:
  template:
    spec:
      restartPolicy: Never
      containers:
      - name: main
        image: bash:5
        command: ["bash"]
        args:
        - -c
        - sleep 120s
