test/conformance/chainsaw/ttl/propagation-policy/orphan/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: orphan
spec:
  steps:
  - name: Create job with orphan deletion policy
    try:
    - create:
        file: job.yaml
  - name: Wait pod is running
    try:
    - assert:
        file: pod-assert.yaml
  - name: Create job with orphan deletion policy
    try:
    - delete:
        file: job.yaml
  - name: Assert pod is still running
    try:
    - assert:
        file: pod-assert.yaml
